--- a/zookeeper-server/pom.xml
+++ b/zookeeper-server/pom.xml
@@ -159,7 +159,7 @@
             </goals>
             <configuration>
               <files>
-                <file>${basedir}/src/main/resources/git.properties</file>
+                <file>${basedir}/zookeeper-server/src/main/resources/git.properties</file>
               </files>
             </configuration>
           </execution>
